Updated Patterns and Blocks

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "copyright-date-block",
+	"name": "staff-directory-guide",
 	"version": "0.1.0",
 	"description": "Example block scaffolded with Create Block tool.",
 	"author": "The WordPress Contributors",
